--- a/food.html
+++ b/food.html
@@ -1,3 +1,32 @@
 ---
 layout: default
 ---
+
+<section class="grid-centered padded centered">
+  <div class="col-8_sm-12">
+    <h2> This this a heading </h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+
+<section class="light-bg">
+  <div class="grid  flex-flip">
+    <div class="col-6_sm-12 bg-image">
+    </div>
+    <div class="col-6_sm-12-middle padded">
+      <h3> This this a heading </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <a class="arrow" href="#"> > </a>
+    </div>
+  </div>
+  <div class="grid flex-flip">
+    <div class="col-6_sm-12 bg-image">
+    </div>
+    <div class="col-6_sm-12-middle padded">
+      <h3> This this a heading </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <a class="arrow" href="#"> > </a>
+    </div>
+  </div>
+</section>
