--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 layout: default
 ---
 
-<section class="grid-centered padded centered">
-  <div class="col-8_sm-12">
+<!-- A BIT ABOUT MS.GLORIAS -->
+<section class="grid-centered padded ">
+  <div class="col-10_sm-12 padded-1 centered">
     <h2> This this a heading </h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure.</p>
   </div>
 </section>
+
+<!-- INSTA EMBED -->
+    <div class="col-10-middle padded center"> <img src="/images/mockembed.png" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
+    </div>
