--- a/about.html
+++ b/about.html
@@ -3,44 +3,34 @@ layout: default
 ---
 
 <section class="padded">
-  <div class="grid padded flex-flip">
-    <div class="col-5_sm-12 bg-image">
+  <div class="grid padded">
+    <div class="col-4_sm-12 center padded-1">
+      <img src="/images/about4.png" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
     </div>
-    <div class="col-7_sm-12-middle padded">
-      <h4 class="subtle-heading"> An experience awaits </h4>
-      <h3> This this a heading </h3>
+    <div class="col-6_sm-12-middle center padded-1">
+      <h3> Hi! We're Ms. Gloria's Kitchen </h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      <a class="button" href="#"> Read More </a>
-    </div>
-  </div>
-  <div class="grid padded flex-flip">
-    <div class="col-7_sm-12-middle padded">
-      <h4 class="subtle-heading"> Adventure with me </h4>
-      <h3> This this a heading </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      <a class="button" href="#"> Read More </a>
-    </div>
-    <div class="col-5_sm-12 bg-image">
+      <a class="button-solid" href="#"> More on the Garden</a>
     </div>
   </div>
 </section>
 
-<section class="padded centered">
-  <h2> Our Services </h2>
+<section class="padded light-bg centered">
+  <h2> What We Do </h2>
   <div class="grid padded-1">
     <div class="col-4_sm-12 padded-1">
-      <i class="far fa-building"></i>
-      <h4> Short Heading </h4>
+      <i class="fas fa-boxes bottom"></i>
+      <h4> Catering </h4>
       <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="far fa-comment"></i>
-      <h4> Short Heading </h4>
+      <i class="fas fa-utensils bottom"></i>
+      <h4> Meal Prep </h4>
       <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="col-4_sm-12 padded-1">
-      <i class="far fa-file"></i>
-      <h4> Short Heading </h4>
+      <i class="fas fa-blender bottom"></i>
+      <h4> Juice </h4>
       <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
   </div>
