--- a/food.html
+++ b/food.html
@@ -3,28 +3,36 @@ layout: default
 ---
 
 <section class="grid-centered padded centered">
-  <div class="col-8_sm-12">
-    <h2> This this a heading </h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="col-10_sm-12">
+    <h2> We Provide Delicious Food in 3 Ways </h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure..</p>
   </div>
 </section>
 
 <section class="light-bg">
   <div class="grid  flex-flip">
-    <div class="col-6_sm-12 bg-image">
+    <div class="col-4_sm-12 center padded-1">  <img src="/images/food1.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded">
-      <h3> This this a heading </h3>
+      <h3> Catering </h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <a class="arrow" href="#"> > </a>
     </div>
   </div>
   <div class="grid flex-flip">
-    <div class="col-6_sm-12 bg-image">
+    <div class="col-4_sm-12 center padded-1"><img src="/images/food1.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded">
-      <h3> This this a heading </h3>
+      <h3> Meal Prep </h3>
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <a class="arrow" href="#"> > </a>
+    </div>
+  </div>
+  <div class="grid  flex-flip">
+    <div class="col-4_sm-12 center padded-1"><img src="/images/food1.jpg" alt="Ms. Gloria's Kitchen " class="editable" width="100%">
+    </div>
+    <div class="col-6_sm-12-middle padded">
+      <h3> Juice </h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <a class="arrow" href="#"> > </a>
     </div>
