rest of 1st draft/layout

--- a/connect.html
+++ b/connect.html
@@ -3,14 +3,14 @@ layout: default
 ---
 
 <section class="grid padded">
-  <div class="col-6_sm-12 padded">
-    <h2> Get In Touch </h2>
+  <div class="col-10_sm-12 center centered padded">
+    <h2> Let's Connect </h2>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p> <strong> Email: </strong> hello@company.com </p>
-    <p> <strong> Phone: </strong> 0412 555 555 </p>
-    <p> <strong> Facebook: </strong> fb.com/companyname </p>
   </div>
-  <div class="col-6_sm-12-middle padded">
+  <div class="col-4_sm-12 padded center">
+    <img src="/images/contact1.jpg" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
+  </div>
+  <div class="col-7_sm-12-middle center padded-1">
     <form class="grid-center" action="https://formspree.io/hello@company.com" method="POST">
       <div class="col-6_sm-12">
         <input type="text" name="name" placeholder="Your Name">
@@ -19,9 +19,12 @@ layout: default
         <input type="email" name="_replyto" placeholder="Your Email">
       </div>
       <div class="col-12">
-        <textarea placeholder="Your Message"></textarea>
-        <input type="submit" value="Send" class="button">
+        <textarea placeholder="How can we help you?"></textarea>
+        <input type="submit" value="Send" class="button-solid">
       </div>
     </form>
-  </div>
+    <p class="padded-connect"> <strong> Contact Info </strong></p>
+    <p class=""> <strong> Email: </strong> hello@company.com </p>
+    <p class=""> <strong> Phone: </strong> 0412 555 555 </p>
+      </div>
 </section>
