--- a/events.html
+++ b/events.html
@@ -3,9 +3,14 @@ layout: default
 ---
 
 <section class="grid-centered padded centered">
-  <div class="col-8_sm-12">
-    <h2> This this a heading </h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="col-10_sm-12">
+    <h2> Come Eat with Us </h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </section>
+
+<section class="padded grid center">
+  <div class="col-10 center ">
+    <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%237bb59b&amp;ctz=America%2FIndiana%2FIndianapolis&amp;src=bW9hc3RldmVAZ21haWwuY29t&amp;src=YWtqYmVnZzFocG5yN3FsZjlzZTBiZjN0ODRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=cG1zLm1vbGx5QGdtYWlsLmNvbQ&amp;src=cHJlc2NvdHQudHJ1ZGVhdUBnbWFpbC5jb20&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZjJqZGtwZTltcnZuNzBhYjM2OXByOXVham9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23B39DDB&amp;color=%23100113&amp;color=%23ca8d57&amp;color=%237aaac2&amp;color=%23b7b7b7&amp;color=%23c8abab&amp;showTitle=0&amp;showTz=0&amp;showDate=0&amp;showCalendars=0&amp;showPrint=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+    </section>
