--- a/food.html
+++ b/food.html
@@ -10,8 +10,8 @@ layout: default
 </section>
 
 <section class="light-bg">
-  <div class="grid  flex-flip">
-    <div class="col-4_sm-12 center padded-1">  <img src="/images/food1.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
+  <div class="grid flex-flip">
+    <div class="col-5_sm-12 center padded-1" id="catering">  <img src="/images/catering.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded">
       <h3> Catering </h3>
@@ -20,7 +20,7 @@ layout: default
     </div>
   </div>
   <div class="grid flex-flip">
-    <div class="col-4_sm-12 center padded-1"><img src="/images/food1.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
+    <div class="col-5_sm-12 center padded-1" id="mealprep"><img src="/images/mealprep.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded">
       <h3> Meal Prep </h3>
@@ -29,7 +29,7 @@ layout: default
     </div>
   </div>
   <div class="grid  flex-flip">
-    <div class="col-4_sm-12 center padded-1"><img src="/images/food1.jpg" alt="Ms. Gloria's Kitchen " class="editable" width="100%">
+    <div class="col-5_sm-12 center padded-1" id="juice"><img src="/images/juice3.png" alt="Ms. Gloria's Kitchen " class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded">
       <h3> Juice </h3>
