--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ layout: default
       <img src="/images/about4.png" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle center padded-1">
-      <h3> Hi! We're Ms. Gloria's Kitchen </h3>
+      <h3> Welcome to Our Kitchen</h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       <a class="button-solid" href="#"> More on the Garden</a>
     </div>
@@ -16,20 +16,26 @@ layout: default
 </section>
 
 <section class="padded light-bg centered">
-  <h2> What We Do </h2>
+  <h2> We Do Food </h2>
   <div class="grid padded-1">
     <div class="col-4_sm-12 padded-1">
-      <i class="fas fa-boxes bottom"></i>
+      <a href="food#catering">
+        <i class="fas fa-boxes bottom"></i>
+      </a>
       <h4> Catering </h4>
       <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
     </div>
     <div class="col-4_sm-12 padded-1">
+      <a href="food#mealprep">
       <i class="fas fa-utensils bottom"></i>
+      </a>
       <h4> Meal Prep </h4>
       <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="col-4_sm-12 padded-1">
+      <a href="food#juice">
       <i class="fas fa-blender bottom"></i>
+      </a>
       <h4> Juice </h4>
       <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
