--- a/connect.html
+++ b/connect.html
@@ -10,7 +10,7 @@ layout: default
   <div class="col-4_sm-12 padded center">
     <img src="/images/contact1.jpg" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
   </div>
-  <div class="col-7_sm-12-middle center padded-1">
+  <div class="col-7_sm-12-middle center light-bg padded-1">
     <form class="grid-center" action="https://formspree.io/hello@company.com" method="POST">
       <div class="col-6_sm-12">
         <input type="text" name="name" placeholder="Your Name">
