--- a/connect.html
+++ b/connect.html
@@ -1,16 +1,18 @@
 ---
 layout: default
 ---
+<section class="grid-centered padded centered">
+<div class="col-10_sm-12">
+  <h2> Let's Connect </h2>
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</section>
 
-<section class="grid padded">
-  <div class="col-10_sm-12 center centered padded">
-    <h2> Let's Connect </h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
+<section class="grid light-bg padded">
   <div class="col-4_sm-12 padded center">
     <img src="/images/contact1.jpg" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
   </div>
-  <div class="col-7_sm-12-middle center light-bg padded-1">
+  <div class="col-7_sm-12-middle center padded-1">
     <form class="grid-center" action="https://formspree.io/hello@company.com" method="POST">
       <div class="col-6_sm-12">
         <input type="text" name="name" placeholder="Your Name">
