--- a/home2.html
+++ b/home2.html
@@ -3,16 +3,14 @@ layout: home
 ---
 <!-- VIDEO HEADER -->
 <section class="center centered">
-  <div class='embed-container'>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/349239638?autoplay=1&loop=1&color=f77e7e&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-  </div>
+  <iframe width="100%" height="500" src="https://www.youtube.com/embed/W0_UOHHX-6g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 
 
 <!-- A BIT ABOUT MS.GLORIAS -->
 <section class="grid-centered padded ">
   <div class="col-10_sm-12 padded-1 centered">
-    <h2> From the Soil to the Soul </h2>
+    <h2> This this a heading </h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure.</p>
   </div>
 </section>
