--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ layout: default
 
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
-      <a class="button-solid" href="#"> More on the Garden</a>
+      <a class="button-solid" href="https://missgloriasgarden.com/dye-summer-camp" target="_blank"> More on the Garden</a>
     </div>
   </div>
 </section>
