--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="padded">
   <div class="grid padded">
-    <div class="col-4_sm-12-middle center padded-1">
+    <div class="col-4_sm-12-middle center ">
       <img src="/images/about4.png" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle center padded-1">
