--- a/food.html
+++ b/food.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="grid-centered padded centered">
-  <div class="col-10_sm-12">
+  <div class="col-10_sm-12 padded">
     <h3> We Provide Delicious Food in 3 Ways </h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure..</p>
   </div>
@@ -28,7 +28,7 @@ layout: default
       <a class="arrow" href="#"> > </a>
     </div>
   </div>
-  <div class="grid  flex-flip">
+  <div class="grid flex-flip">
     <div class="col-5_sm-12 center padded-1" id="juice"><img src="/images/juice3.png" alt="Ms. Gloria's Kitchen " class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded">
