--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 <!-- VIDEO HEADER -->
 <section class="center centered">
   <div class='embed-container'>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/349239638?autoplay=1&loop=1&color=f77e7e&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/349239638?autoplay=1&loop=1&color=f77e7e&title=0&byline=0&portrait=0" transparent="0.5"style="position:absolute;top:0;left:0;width:100%;height:100%;background-color: #FFFFFF;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 </section>
 
