--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ layout: default
   </div>
 </section>
 
-<section class="padded light-bg centered">
+<section class="padded banner centered">
   <h3> We Do Food </h3>
   <div class="grid padded-1">
     <div class="col-4_sm-12 padded-1">
