--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@ layout: default
   </div>
 </section>
 
-<section class="padded grid light-bg">
+<section class="padded grid">
   <div class="col-10 center centered">
     <iframe class="center" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%237bb59b&amp;ctz=America%2FIndiana%2FIndianapolis&amp;src=bW9hc3RldmVAZ21haWwuY29t&amp;src=YWtqYmVnZzFocG5yN3FsZjlzZTBiZjN0ODRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=cG1zLm1vbGx5QGdtYWlsLmNvbQ&amp;src=cHJlc2NvdHQudHJ1ZGVhdUBnbWFpbC5jb20&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZjJqZGtwZTltcnZuNzBhYjM2OXByOXVham9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23B39DDB&amp;color=%23100113&amp;color=%23ca8d57&amp;color=%237aaac2&amp;color=%23b7b7b7&amp;color=%23c8abab&amp;showTitle=0&amp;showTz=0&amp;showDate=0&amp;showCalendars=0&amp;showPrint=0" style="border-width:0" width="90%" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
