--- a/food.html
+++ b/food.html
@@ -9,7 +9,7 @@ layout: default
   </div>
 </section>
 
-<section class="light-bg">
+<section class="">
   <div class="grid flex-flip">
     <div class="col-5_sm-12 center padded-1" id="catering">  <img src="/images/catering.jpg" alt="Ms. Gloria's Kitchen" class="editable" width="100%">
     </div>
