banner image overlay

--- a/about.html
+++ b/about.html
@@ -18,8 +18,9 @@ layout: default
   </div>
 </section>
 
-<section class="padded banner centered">
-  <h3> We Do Food </h3>
+<section class="grid-center-middle banner centered ">
+  <div class="padded layer">
+  <h3 class="padded-1"> We Do Food </h3>
   <div class="grid padded-1">
     <div class="col-4_sm-12 padded-1">
       <a href="food#catering">
@@ -42,5 +43,6 @@ layout: default
       <h4> Juice </h4>
       <p>Irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </div>
+  </div>
   </div>
 </section>
