--- a/about.html
+++ b/about.html
@@ -4,12 +4,14 @@ layout: default
 
 <section class="padded">
   <div class="grid padded">
-    <div class="col-4_sm-12-middle center ">
-      <img src="/images/about4.png" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
+    <div class="col-4_sm-12-middle center padded-1">
+      <img src="/images/about2.jpg" alt="Ms. Gloria's Kitchen Instagram" class="editable" width="100%">
     </div>
     <div class="col-6_sm-12-middle center padded-1">
       <h3> Welcome to Our Kitchen</h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br>
+
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br>
 
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
